connect-server: remove legacy code

nautilus-connect-server is a legacy application from
GNOME 2 era, where we had no consistent way to manage
servers.

With the introduction of NautilusPlacesView, this code
becomes obsolete, as the network management logic is
moved to the places view.

Remove the legacy code.

https://bugzilla.gnome.org/show_bug.cgi?id=753871